atspi-misc: Prevent leak

We need to free the data that XGetWindowProperty returns back to us.

https://bugzilla.gnome.org/show_bug.cgi?id=678738